--- a/lefthook.yml
+++ b/lefthook.yml
@@ -1,12 +1,16 @@
 pre-commit:
   commands:
-    check:
+    biome:
       glob: "*.{js,ts,cjs,mjs,d.cts,d.mts,jsx,tsx,json,jsonc}"
       run: biome check --write --no-errors-on-unmatched --files-ignore-unknown=true {staged_files} && git update-index --again
+    actionlint:
+      root: ".github/workflows"
+      glob: "*.yml"
+      run: actionlint
 
 pre-push:
   commands:
-    check:
+    biome:
       glob: "*.{js,ts,cjs,mjs,d.cts,d.mts,jsx,tsx,json,jsonc}"
       run: biome check --no-errors-on-unmatched --files-ignore-unknown=true {push_files}
 
