--- a/.github/workflows/mermaid-diff-comment.yml
+++ b/.github/workflows/mermaid-diff-comment.yml
@@ -12,6 +12,8 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - name: Set up Node.js
         uses: actions/setup-node@v4
@@ -27,7 +29,7 @@ jobs:
       - name: Get Mermaid diff
         run: |
           # Get the list of modified .mmd files
-          git diff --name-only ${{ github.event.pull_request.base.sha }} ${{ github.sha }} | grep '.mmd$' > modified_mmd_files.txt
+          git diff --name-only "${{ github.event.pull_request.base.sha }}" "${{ github.sha }}" | grep '.mmd$' > modified_mmd_files.txt
 
           # If no .mmd files were modified, skip the next steps
           if [[ ! -s modified_mmd_files.txt ]]; then
@@ -36,7 +38,7 @@ jobs:
           fi
 
           # Process each .mmd file
-          while read file; do
+          while read -r file; do
             echo "Processing file: $file"
 
             # Get the previous version of the file
@@ -46,22 +48,14 @@ jobs:
             cat $file > after_$file
 
             # Prepare Mermaid diagram diff
-            echo "### Changes in $file" >> pr_comment.md
-            echo "#### Before" >> pr_comment.md
-            echo "\`\`\`mermaid" >> pr_comment.md
-            cat before_$file >> pr_comment.md
-            echo "\`\`\`" >> pr_comment.md
-            echo "#### After" >> pr_comment.md
-            echo "\`\`\`mermaid" >> pr_comment.md
-            cat after_$file >> pr_comment.md
-            echo "\`\`\`" >> pr_comment.md
+            { echo "### Changes in $file"; echo "#### Before"; echo "\`\`\`mermaid"; cat before_$file; echo "\`\`\`"; echo "#### After"; echo "\`\`\`mermaid"; cat after_$file; echo "\`\`\`"; } >> pr_comment.md
           done < modified_mmd_files.txt
 
       - name: Post comment to pull request
         run: |
           # If the comment file exists, post it to the PR
           if [ -f pr_comment.md ]; then
-            gh pr comment ${{ github.event.pull_request.number }} --body-file pr_comment.md
+            gh pr comment "${{ github.event.pull_request.number }}" --body-file pr_comment.md
           else
             echo "No Mermaid diagrams to comment on."
           fi
