ci(mermaid): apply shellcheck fixes

--- a/.github/workflows/mermaid-diff-comment.yml
+++ b/.github/workflows/mermaid-diff-comment.yml
@@ -29,33 +29,43 @@ jobs:
       - name: Get Mermaid diff
         run: |
           # Get the list of modified .mmd files
-          git diff --name-only "${{ github.event.pull_request.base.sha }}" "${{ github.sha }}" | grep '.mmd$' > modified_mmd_files.txt
+          git diff --name-only "${GITHUB_EVENT_PULL_REQUEST_BASE_SHA}" "${GITHUB_SHA}" | grep '.mmd$' > modified_mmd_files.txt
 
           # If no .mmd files were modified, skip the next steps
-          if [[ ! -s modified_mmd_files.txt ]]; then
+          if [[ ! -s "modified_mmd_files.txt" ]]; then
             echo "No Mermaid files were modified."
             exit 0
           fi
 
           # Process each .mmd file
           while read -r file; do
-            echo "Processing file: $file"
+            echo "Processing file: ${file}"
 
             # Get the previous version of the file
-            git show ${{ github.event.pull_request.base.sha }}:$file > before_$file || echo "No previous version found for $file"
+            git show "${GITHUB_EVENT_PULL_REQUEST_BASE_SHA}:${file}" > "before_${file}" || echo "No previous version found for ${file}"
 
             # Get the current version of the file
-            cat $file > after_$file
+            cat "${file}" > "after_${file}"
 
             # Prepare Mermaid diagram diff
-            { echo "### Changes in $file"; echo "#### Before"; echo "\`\`\`mermaid"; cat before_$file; echo "\`\`\`"; echo "#### After"; echo "\`\`\`mermaid"; cat after_$file; echo "\`\`\`"; } >> pr_comment.md
+            {
+              echo "### Changes in ${file}"
+              echo "#### Before"
+              echo "\`\`\`mermaid"
+              cat "before_${file}"
+              echo "\`\`\`"
+              echo "#### After"
+              echo "\`\`\`mermaid"
+              cat "after_${file}"
+              echo "\`\`\`"
+            } >> pr_comment.md
           done < modified_mmd_files.txt
 
       - name: Post comment to pull request
         run: |
           # If the comment file exists, post it to the PR
-          if [ -f pr_comment.md ]; then
-            gh pr comment "${{ github.event.pull_request.number }}" --body-file pr_comment.md
+          if [ -f "pr_comment.md" ]; then
+            gh pr comment "${GITHUB_EVENT_NUMBER}" --body-file "pr_comment.md"
           else
             echo "No Mermaid diagrams to comment on."
           fi
