--- a/.github/workflows/mermaid-diff-comment.yml
+++ b/.github/workflows/mermaid-diff-comment.yml
@@ -4,6 +4,9 @@ on:
   pull_request:
     types:
       - opened
+      - edited
+      - synchronize
+      - ready_for_review
     paths:
       - "**.mmd"
 
