--- a/.github/workflows/mermaid-diff-comment.yml
+++ b/.github/workflows/mermaid-diff-comment.yml
@@ -9,6 +9,7 @@ on:
       - ready_for_review
     paths:
       - "**.mmd"
+      - ".github/workflows/mermaid-diff-comment.yml"
 
 jobs:
   comment-on-diff:
