--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "floerkea",
   "license": "MIT",
   "scripts": {
+    "generate": "bun run scripts/generate.ts",
     "lint": "biome check .",
     "lint:fix": "biome check . --write"
   },
