--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
     "@biomejs/biome": "1.9.4",
     "@commitlint/cli": "19.6.0",
     "@commitlint/config-conventional": "19.6.0",
-    "@types/bun": "latest",
+    "@types/bun": "^1.1.14",
     "lefthook": "1.8.5"
   },
   "peerDependencies": {
-    "typescript": "^5.5.2"
+    "typescript": "^5.7.2"
   },
   "dependencies": {
-    "mermaid": "^11.4.0"
+    "mermaid": "^11.4.1"
   },
   "packageManager": "bun@1.1.38"
 }
