--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "scripts": {
     "generate": "bun run scripts/generate.ts",
     "lint": "biome check .",
-    "lint:fix": "biome check . --write"
+    "lint:fix": "biome check . --write",
+    "text": "textlint **/*.md",
+    "text:fix": "textlint **/*.md --fix"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
