--- a/package.json
+++ b/package.json
@@ -9,24 +9,23 @@
     "text:fix": "bun run ./scripts/textlint.ts **/*.md --fix"
   },
   "devDependencies": {
-    "@biomejs/biome": "1.9.4",
-    "@commitlint/cli": "19.8.1",
-    "@commitlint/config-conventional": "19.8.1",
+    "@biomejs/biome": "^2.3.11",
+    "@commitlint/cli": "^20.3.1",
+    "@commitlint/config-conventional": "^20.3.1",
     "@textlint-ja/textlint-rule-no-synonyms": "^1.3.0",
-    "@types/bun": "^1.1.14",
-    "lefthook": "1.11.14",
-    "sudachi-synonyms-dictionary": "^14.0.0",
-    "textlint": "^14.4.0",
+    "@types/bun": "^1.3.6",
+    "lefthook": "^2.0.15",
+    "sudachi-synonyms-dictionary": "^16.0.0",
+    "textlint": "^15.5.0",
     "textlint-rule-prefer-tari-tari": "^1.0.3",
     "textlint-rule-preset-ja-spacing": "^2.4.3",
     "textlint-rule-preset-ja-technical-writing": "^12.0.2",
     "textlint-rule-spellcheck-tech-word": "^5.0.0"
   },
   "peerDependencies": {
-    "typescript": "^5.7.2"
+    "typescript": "^5.9.3"
   },
   "dependencies": {
-    "mermaid": "^11.4.1"
-  },
-  "packageManager": "bun@1.1.38"
+    "mermaid": "^11.12.2"
+  }
 }
