--- a/renovate.json5
+++ b/renovate.json5
@@ -2,7 +2,7 @@
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": ["config:recommended"],
   "timezone": "Asia/Tokyo",
-  "schedule": ["before 8am on weekdays"],
+  "schedule": ["* 0-7 * * 1-5"],
   "minimumReleaseAge": "7 days",
   "packageRules": [
     {
